--- a/lab3/lab3A/lab3A.vcxproj
+++ b/lab3/lab3A/lab3A.vcxproj
@@ -141,6 +141,10 @@
   <ItemGroup>
     <ClCompile Include="lab3A.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Dog.h" />
+    <ClInclude Include="Spaniel.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
