--- a/lab3/lab3G/lab3G.vcxproj
+++ b/lab3/lab3G/lab3G.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{c948cdaf-f67e-424a-a40a-2f380cb4cea7}</ProjectGuid>
-    <RootNamespace>lab3B</RootNamespace>
+    <ProjectGuid>{46b2efee-6a1a-47ac-9362-b03dcb130c5d}</ProjectGuid>
+    <RootNamespace>lab3G</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,11 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="lab3B.cpp" />
-    <ClCompile Include="Library.cpp" />
+    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Figure.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Library.h" />
+    <ClInclude Include="Figure.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
