--- a/lab6/lab6/lab6.vcxproj
+++ b/lab6/lab6/lab6.vcxproj
@@ -140,6 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="lab6.cpp" />
+    <ClCompile Include="Product.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Product.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
